--- a/lunbo1/lunbo1.css
+++ b/lunbo1/lunbo1.css
@@ -15,13 +15,34 @@ ul,body {
     width: 100px;
     height: 200px;
     margin: 0 auto;
+    user-select: none;
+    cursor: pointer;
+}
+.content .leftBtn,
+.content .rightBtn {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 40px;
+    background-color: rgba(204,204,204,.5);
+    color: #fff;
+    font-size: 40px;
+    text-align: center;
+    z-index: 10;
+}
+.content .leftBtn {
+    left: 0;
+}
+.content .rightBtn {
+    right: 0;
 }
 ul {
     position: absolute;
     list-style: none;
     padding: 0;
     font-size: 0;
-    transition: all 1.5s;
+    transition: all 1s;
 }
 li {
     display: inline-block;
