--- a/lunbo1/lunbo1.css
+++ b/lunbo1/lunbo1.css
@@ -18,6 +18,9 @@ ul,body {
     user-select: none;
     cursor: pointer;
 }
+.content .btns:hover {
+    background-color: rgba(204,204,204,.7);
+}
 .content .leftBtn,
 .content .rightBtn {
     position: absolute;
@@ -36,6 +39,27 @@ ul,body {
 }
 .content .rightBtn {
     right: 0;
+}
+.content .points {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 30px;
+    margin: auto;
+    text-align: center;
+}
+.content em {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(204,204,204,.8);
+    border-radius: 50%;
+}
+.content em:hover {
+    background-color: #333;
+}
+.content em+em {
+    margin-left: 10px;
 }
 ul {
     position: absolute;
